# slimenrf-serial-console

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml  rust-build.yml
src/: app.rs  console.rs  dfu.rs  main.rs  nrfdfu.rs  serial.rs  theme.rs
src/ui/: connection_bar.rs  console.rs  mod.rs  receiver.rs  tracker.rs  updater.rs
