[package]
name = "slimenrf-serial-gui"
version = "0.1.0"
edition = "2021"
description = "Cross-platform GUI for controlling SlimeNRF tracker and receiver firmware over USB serial"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jitingcn/SlimeVR-Tracker-nRF"
build = "build.rs"

[dependencies]
# Immediate-mode GUI. Pulls in egui, winit and glow; works on Linux, Windows and macOS.
eframe = "0.34"
# Cross-platform serial port access + USB VID/PID enumeration.
serialport = "4.9"
# Native file-open dialog for picking the .uf2 firmware. On Linux this uses the
# XDG desktop portal by default (no GTK build- or run-time dependency), so it works
# on KDE/Wayland/etc. out of the box.
rfd = "0.17"
# Reading Nordic nRF DFU .zip packages (manifest.json + .dat/.bin) for the receiver
# secure-DFU-over-serial flasher.
zip = { version = "5.1", default-features = false, features = ["deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Parsing Intel HEX firmware so the receiver can be flashed directly from a .hex
# (we build the Nordic DFU init packet in-app, no nrfutil/nRF Connect needed).
ihex = "3"
# SHA-256 for the DFU init packet's firmware hash (the bootloader validates the
# image against it). RustCrypto; pinned to the long-stable 0.10 line.
sha2 = "0.10"

[build-dependencies]
# Embeds the .ico into the Windows .exe (see build.rs). Kept unconditional rather
# than under [target.'cfg(windows)'.build-dependencies]: for build-dependencies the
# cfg is evaluated against the host, so gating it would exclude the crate exactly
# when cross-compiling Linux -> Windows. It compiles cheaply and is only invoked
# when the *target* OS is Windows.
winresource = "0.1"

[profile.release]
opt-level = 2
lto = "thin"
strip = true